Atualização do curso por parte do professor em desenvolvimento. Back-end do update quase feito e front ainda pensando como vai ficar.